logs/freyja_examples/build.make.048.log.stderr
/home/reustudents/catkin_ws/src/Freyja/freyja_examples/src/temporal_provider.cpp: In function ‘void gestureUpdate(const ConstPtr&)’:
/home/reustudents/catkin_ws/src/Freyja/freyja_examples/src/temporal_provider.cpp:102:12: error: request for member ‘forward’ in ‘* drone’, which is of non-class type ‘DroneType()’
  102 |     drone->forward();
      |            ^~~~~~~
/home/reustudents/catkin_ws/src/Freyja/freyja_examples/src/temporal_provider.cpp:104:12: error: request for member ‘right’ in ‘* drone’, which is of non-class type ‘DroneType()’
  104 |     drone->right();
      |            ^~~~~
/home/reustudents/catkin_ws/src/Freyja/freyja_examples/src/temporal_provider.cpp:106:12: error: request for member ‘left’ in ‘* drone’, which is of non-class type ‘DroneType()’
  106 |     drone->left();
      |            ^~~~
/home/reustudents/catkin_ws/src/Freyja/freyja_examples/src/temporal_provider.cpp:108:12: error: request for member ‘backward’ in ‘* drone’, which is of non-class type ‘DroneType()’
  108 |     drone->backward();
      |            ^~~~~~~~
/home/reustudents/catkin_ws/src/Freyja/freyja_examples/src/temporal_provider.cpp:110:12: error: request for member ‘up’ in ‘* drone’, which is of non-class type ‘DroneType()’
  110 |     drone->up();
      |            ^~
/home/reustudents/catkin_ws/src/Freyja/freyja_examples/src/temporal_provider.cpp: In function ‘int main(int, char**)’:
/home/reustudents/catkin_ws/src/Freyja/freyja_examples/src/temporal_provider.cpp:143:23: error: request for member ‘return_state’ in ‘drone’, which is of non-class type ‘DroneType()’
  143 |     ref_state = drone.return_state();
      |                       ^~~~~~~~~~~~
make[2]: *** [CMakeFiles/temporal_provider_node.dir/build.make:76: CMakeFiles/temporal_provider_node.dir/src/temporal_provider.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:967: CMakeFiles/temporal_provider_node.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
